--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,11 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+# .env
+.local
+*.local
+.env/.env.*.local
 
 # next.js build output
 .next
+
